--- a/links/about.html
+++ b/links/about.html
@@ -94,24 +94,9 @@ li.nav-item:hover span.mbar{
      z-index: 2;
      position: relative;
     }
-    .falseon{
-      width: 600px;
-      height: auto;
-      display: block;
-      position: relative;
-      top: -10%;
-    }
     .shape{
       width: 92%;
       margin: auto;
-    }
-    .holder{
-      display: inline-block;
-      width: 100px;
-      height: auto;
-      border-style: solid;
-      border-width: 2px;
-      margin-right: 50px;
     }
     </style>
     </head>
@@ -153,15 +138,15 @@ li.nav-item:hover span.mbar{
               <div class="shape">
               <div class="row">
                 <div class="col-md-12 border">
-                  <span class="h2">/</span><span class="h1">/</span><span>A</span><span>B</span><span>O</span><span>U</span><span>T</span><span class="h3">M</span><span class="h3">E</span>
+                  Free Space
               </div>
               </div>
               <div class="row">
                 <div class="col-md-6 border">
                   <img src="../images/false.png" alt="THE image should be here" class="img-fluid" width="400px" height="400px">
-                  <span class="holder">
+                  <div class="col-md-4 border">
                     <span class="h2">/</span><span class="h1">/</span><span>A</span><span>B</span><span>O</span><span>U</span><span>T</span><span class="h3">M</span><span class="h3">E</span>
-                  </span>
+                </div>
                 </div>
               </div>
               <div class="row">
