--- a/links/about.html
+++ b/links/about.html
@@ -98,6 +98,10 @@ li.nav-item:hover span.mbar{
       width: 92%;
       margin: auto;
     }
+    .abtext{
+      margin: auto;
+      text-align: left;
+    }
     </style>
     </head>
     <body>
@@ -146,8 +150,10 @@ li.nav-item:hover span.mbar{
                   <img src="../images/false.png" alt="THE image should be here" class="img-fluid d-block" width="500px" height="500px">
                   </div>
                   <div class="col-md-4 border">
+                    <div class="abtext">
                     <span>/</span><span>/</span><span>A</span><span>B</span><span>O</span><span>U</span><span>T</span><span class="h3">M</span><span class="h3">E</span>
-                </div>
+                  </div>
+                  </div>
               </div>
               <div class="row">
                 <div class="col-md-12 border">
