--- a/links/about.html
+++ b/links/about.html
@@ -101,6 +101,9 @@ li.nav-item:hover span.mbar{
     .abtext{
       margin: auto;
       text-align: left;
+      width: 100px;
+      border-style: solid;
+      border-width: 2px;
     }
     </style>
     </head>
