--- a/links/about.html
+++ b/links/about.html
@@ -99,7 +99,8 @@ li.nav-item:hover span.mbar{
       margin: auto;
     }
     .abtext{
-      margin: auto;
+      margin-right: 30px;
+      margin-top: 60px;
       text-align: left;
       width: 100px;
       border-style: solid;
