--- a/links/about.html
+++ b/links/about.html
@@ -99,8 +99,7 @@ li.nav-item:hover span.mbar{
       margin: auto;
     }
     .abtext{
-      margin-right: 60px;
-      margin-top: 100px;
+      margin-top: 50%;
       text-align: left;
       width: 100px;
       border-style: solid;
