--- a/links/about.html
+++ b/links/about.html
@@ -99,7 +99,7 @@ li.nav-item:hover span.mbar{
       margin: auto;
     }
     .abtext{
-      margin-top: 25%;
+      margin-top: 20%;
       text-align: left;
       width: 100px;
       border-style: solid;
@@ -152,7 +152,7 @@ li.nav-item:hover span.mbar{
                 <div class="col-md-5 border">
                   <img src="../images/false.png" alt="THE image should be here" class="img-fluid d-block" width="500px" height="500px">
                   </div>
-                  <div class="col-md-5 border">
+                  <div class="col-md-5 border p-0">
                     <div class="abtext">
                     <span>/</span><span>/</span><span>A</span><span>B</span><span>O</span><span>U</span><span>T</span><span class="h3">M</span><span class="h3">E</span>
                   </div>
