--- a/links/about.html
+++ b/links/about.html
@@ -149,12 +149,12 @@ li.nav-item:hover span.mbar{
               </div>
               </div>
               <div class="row">
-                <div class="col-md-5 border">
+                <div class="col-md-5 border p-0">
                   <img src="../images/false.png" alt="THE image should be here" class="img-fluid d-block" width="620px" height="620px">
                   </div>
                   <div class="col-md-5 border p-0">
                     <div class="abtext">
-                    <span>/</span><span>/</span><span>A</span><span>B</span><span>O</span><span>U</span><span>T</span><span class="h3">M</span><span class="h3">E</span>
+                    <span style="font-size: 3.5vw;">/</span class="font-size:4vw;"><span>/</span><span>A</span><span>B</span><span>O</span><span>U</span><span>T</span><span class="h3">M</span><span class="h3">E</span>
                   </div>
                   </div>
               </div>
