--- a/links/about.html
+++ b/links/about.html
@@ -154,7 +154,7 @@ li.nav-item:hover span.mbar{
                   </div>
                   <div class="col-md-5 border p-0">
                     <div class="abtext">
-                    <span style="font-size: 3.5vw;">/</span class="font-size:4vw;"><span>/</span><span>A</span><span>B</span><span>O</span><span>U</span><span>T</span><span class="h3">M</span><span class="h3">E</span>
+                    <span style="font-size: 3.5vw;">/</span><span class="font-size: 4vw;">/</span><span class="font-size: 4.3vw;">A</span class="font-size: 4.6vw;">B</span><span class="font-size: 4.9vw;">O</span><span class="font-size: 5.2vw;">U</span><span class="font-size: 5.5vw;">T</span><span class="h3">M</span><span class="h3">E</span>
                   </div>
                   </div>
               </div>
