--- a/links/about.html
+++ b/links/about.html
@@ -99,7 +99,7 @@ li.nav-item:hover span.mbar{
       margin: auto;
     }
     .abtext{
-      margin-top: 20%;
+      margin-top: 10%;
       text-align: left;
       width: 100px;
       border-style: solid;
@@ -154,7 +154,7 @@ li.nav-item:hover span.mbar{
                   </div>
                   <div class="col-md-5 border p-0">
                     <div class="abtext">
-                    <span style="font-size: 4vw;">/</span><span style="font-size: 4.2vw;">/</span><span style="font-size: 4.6vw;">A</span><span style="font-size: 5vw;">B</span><span style="font-size: 5.4vw;">O</span><span style="font-size: 5.8vw;">U</span><span style="font-size: 6.2vw;">T</span><span class="h3">M</span><span class="h3">E</span>
+                    <span style="font-size: 4vw;">/</span><span style="font-size: 4.4vw;">/</span><span style="font-size: 5.8vw;">A</span><span style="font-size: 6.1vw;">B</span><span style="font-size: 6.4vw;">O</span><span style="font-size: 6.7vw;">U</span><span style="font-size: 7vw;">T</span><span style="font-size: 4.2vw;">M</span><span style="font-size: 4.2vw;">E</span>
                   </div>
                   </div>
               </div>
