--- a/links/about.html
+++ b/links/about.html
@@ -99,7 +99,8 @@ li.nav-item:hover span.mbar{
       margin: auto;
     }
     .abtext{
-      margin-top: -10%;
+      margin-top: -2%;
+      margin-right: 10px;
       text-align: left;
       width: 100px;
       border-style: solid;
