--- a/links/about.html
+++ b/links/about.html
@@ -99,6 +99,7 @@ li.nav-item:hover span.mbar{
       margin: auto;
     }
     .abtext{
+      margin-top: 4px;
       text-align: left;
       width: 100px;
       border-style: solid;
