--- a/links/about.html
+++ b/links/about.html
@@ -98,6 +98,16 @@ li.nav-item:hover span.mbar{
       width: 92%;
       margin: auto;
     }
+    .obj1{
+      font-size: 4vw;
+      margin-top: 4px;
+      display: inline-block;
+    }
+    .obj2{
+      font-size: 4.4vw;
+      margin-top: 4px;
+      display: inline-block;
+    }
     .abtext{
       margin-top: 16px;
       text-align: left;
@@ -154,7 +164,7 @@ li.nav-item:hover span.mbar{
                   </div>
                   <div class="col-md-5 border p-0">
                     <div class="abtext">
-                    <span style="font-size: 4vw;">/</span><span style="font-size: 4.4vw;">/</span><span style="font-size: 5.8vw;">A</span><span style="font-size: 6.1vw;">B</span><span style="font-size: 6.4vw;">O</span><span style="font-size: 6.7vw;">U</span><span style="font-size: 7vw;">T</span><span style="font-size: 4.2vw;">M</span><span style="font-size: 4.2vw;">E</span>
+                    <span class="obj1">/</span><span>/</span><span style="font-size: 5.8vw;">A</span><span style="font-size: 6.1vw;">B</span><span style="font-size: 6.4vw;">O</span><span style="font-size: 6.7vw;">U</span><span style="font-size: 7vw;">T</span><span style="font-size: 4.2vw;">M</span><span style="font-size: 4.2vw;">E</span>
                   </div>
                   </div>
               </div>
