--- a/links/about.html
+++ b/links/about.html
@@ -100,11 +100,11 @@ li.nav-item:hover span.mbar{
     }
     .obj1{
       font-size: 4vw;
-      padding-bottom: 2px;
+      padding-top: 2px;
     }
     .obj2{
       font-size: 4.4vw;
-      padding-bottom: 2px;
+      padding-top: 2px;
     }
     .abtext{
       margin-top: 16px;
