--- a/links/about.html
+++ b/links/about.html
@@ -101,10 +101,12 @@ li.nav-item:hover span.mbar{
     .obj1{
       font-size: 4vw;
       margin-bottom: 3px;
+      display: block;
     }
     .obj2{
       font-size: 4.4vw;
       margin-bottom: 3px;
+      display: block;
     }
     .abtext{
       margin-top: 16px;
