--- a/links/about.html
+++ b/links/about.html
@@ -111,6 +111,12 @@ li.nav-item:hover span.mbar{
       border-style: solid;
       border-width: 1px;
     }
+    #binfo{
+      position: relative;
+      max-width: 70%;
+      top: 40px;
+      z-index: 2;
+    }
     </style>
     </head>
     <body>
@@ -165,14 +171,9 @@ li.nav-item:hover span.mbar{
                   </div>
               </div>
               <div class="row">
-                <div class="col-md-12 border">
+                <div class="col-md-12 border" id="binfo">
                   List of menu
                 </div>
-              </div>
-              <div class="row">
-                <div class="col-md-4 border">Free Space</div>
-                <div class="col-md-8 border">Info</div>
-              </div>
               </div>
             </div>
     </body>
