--- a/links/about.html
+++ b/links/about.html
@@ -113,9 +113,8 @@ li.nav-item:hover span.mbar{
     }
     #binfo{
       position: relative;
-      max-width: 70%;
-      top: 40px;
-      z-index: 2;
+      max-width: 80%;
+      bottom: 50px;
     }
     </style>
     </head>
