--- a/links/about.html
+++ b/links/about.html
@@ -111,10 +111,14 @@ li.nav-item:hover span.mbar{
       border-style: solid;
       border-width: 1px;
     }
+    #imgobj{
+      z-index: 2;
+    }
     #binfo{
       position: relative;
       max-width: 80%;
-      bottom: 50px;
+      bottom: 150px;
+      z-index: -2;
     }
     </style>
     </head>
@@ -161,7 +165,7 @@ li.nav-item:hover span.mbar{
               </div>
               <div class="row">
                 <div class="col-md-5 border p-0">
-                  <img src="../images/false.png" alt="THE image should be here" class="img-fluid d-block" width="620px" height="620px">
+                  <img src="../images/false.png" alt="THE image should be here" class="img-fluid d-block" width="620px" height="620px" id="imgobj">
                   </div>
                   <div class="col-md-5 border p-0">
                     <div class="abtext">
