--- a/links/about.html
+++ b/links/about.html
@@ -116,8 +116,8 @@ li.nav-item:hover span.mbar{
     }
     #binfo{
       position: relative;
-      max-width: 80%;
-      bottom: 150px;
+      width: 80%;
+      bottom: 50%;
       z-index: -2;
     }
     </style>
