--- a/links/about.html
+++ b/links/about.html
@@ -116,8 +116,8 @@ li.nav-item:hover span.mbar{
     }
     #binfo{
       position: relative;
-      width: 80%;
-      bottom: 50%;
+      width: 60%;
+      top: 100%;
       z-index: -2;
     }
     </style>
