--- a/links/about.html
+++ b/links/about.html
@@ -116,8 +116,8 @@ li.nav-item:hover span.mbar{
     }
     #binfo{
       position: relative;
-      width: 60%;
-      top: 100%;
+      width:500px;
+      top: 67px;
       z-index: -2;
     }
     </style>
