--- a/links/about.html
+++ b/links/about.html
@@ -116,9 +116,7 @@ li.nav-item:hover span.mbar{
     }
     #binfo{
       position: relative;
-      width:500px;
-      top: 67px;
-      z-index: -2;
+      width: 50%;
     }
     </style>
     </head>
