--- a/links/about.html
+++ b/links/about.html
@@ -116,7 +116,7 @@ li.nav-item:hover span.mbar{
     }
     #binfo{
       position: relative;
-      width: 50%;
+      max-width: 50%;
     }
     </style>
     </head>
