--- a/links/about.html
+++ b/links/about.html
@@ -115,8 +115,10 @@ li.nav-item:hover span.mbar{
       z-index: 2;
     }
     #binfo{
-      position: relative;
+      position: absolute;
       max-width: 50%;
+      top: 50%;
+      
     }
     </style>
     </head>
