--- a/links/about.html
+++ b/links/about.html
@@ -146,7 +146,7 @@ li.nav-item:hover span.mbar{
                 </ul>
               </div>  
             </nav>
-            <div class="container-fluid">
+            <div class="container">
               <div class="shape">
               <div class="row">
                 <div class="col-md-12 border">
