--- a/links/about.html
+++ b/links/about.html
@@ -95,7 +95,7 @@ li.nav-item:hover span.mbar{
      position: relative;
     }
     .shape{
-      width: 92%;
+      width: 755px;
       margin: auto;
     }
     .obj1{
@@ -146,7 +146,7 @@ li.nav-item:hover span.mbar{
                 </ul>
               </div>  
             </nav>
-            <div class="container">
+            <div class="container-fluid">
               <div class="shape">
               <div class="row">
                 <div class="col-md-12 border">
