--- a/links/about.html
+++ b/links/about.html
@@ -99,10 +99,10 @@ li.nav-item:hover span.mbar{
       margin: auto;
     }
     .obj1{
-      font-size: 4vw;
+      font-size: 45px;
     }
     .obj2{
-      font-size: 4.4vw;
+      font-size: 45px;
     }
     .abtext{
       margin-top: 16px;
@@ -159,7 +159,7 @@ li.nav-item:hover span.mbar{
                 </div>
                   <div class="col-md-5 border p-0">
                     <div class="abtext">
-                    <span class="obj1">/</span><span class="obj2">/</span><span style="font-size: 5.8vw;">A</span><span style="font-size: 6.1vw;">B</span><span style="font-size: 6.4vw;">O</span><span style="font-size: 6.7vw;">U</span><span style="font-size: 7vw;">T</span><span style="font-size: 4.2vw;">M</span><span style="font-size: 4.2vw;">E</span>
+                    <span class="obj1">/</span><span class="obj2">/</span><span style="font-size: 67px;">A</span><span style="font-size: 70px;">B</span><span style="font-size: 73px;">O</span><span style="font-size: 76px;">U</span><span style="font-size: 79px;">T</span><span style="font-size: 40px;">M</span><span style="font-size: 40px;">E</span>
                   </div>
                   </div>
               </div>
