--- a/links/about.html
+++ b/links/about.html
@@ -96,7 +96,9 @@ li.nav-item:hover span.mbar{
     }
     .shape{
       width: 760px;
+      height: 500px;
       margin: auto;
+      position: relative;
     }
     .obj1{
       font-size: 45px;
@@ -108,6 +110,22 @@ li.nav-item:hover span.mbar{
       text-align: left;
       border-style: solid;
       border-width: 1px;
+    }
+    .conti{
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      border-style: solid;
+      border-width: 1px;
+    }
+    .rave{
+      border-style: solid;
+      border-width: 1px;
+      z-index: 9;
+      margin-top: 20px;
+      width: 50%;
     }
     </style>
     </head>
@@ -148,11 +166,7 @@ li.nav-item:hover span.mbar{
             <div class="container-fluid">
               <div class="shape">
               <div class="row">
-                <div class="col-md-12 border">
-                  Free Space
-              </div>
-              </div>
-              <div class="row">
+                <div class="conti">
                 <div class="col-md-5 border p-0">
                   <img src="../images/false.png" alt="THE image should be here" class="img-fluid d-block" width="620px" height="620px" id="imgobj">
                 </div>
@@ -161,9 +175,11 @@ li.nav-item:hover span.mbar{
                     <span class="obj1">/</span><span class="obj2">/</span><span style="font-size: 67px;">A</span><span style="font-size: 70px;">B</span><span style="font-size: 73px;">O</span><span style="font-size: 76px;">U</span><span style="font-size: 79px;">T</span><span style="font-size: 40px;">M</span><span style="font-size: 40px;">E</span>
                   </div>
                   </div>
+                  </div>
               </div>
               <div class="row">
-                <div class="col-md-12 border" id="binfo">
+                <div class="col-md-12 border">
+                  <div class="conti rave"></div>
                 </div>
               </div>
             </div>
