--- a/links/about.html
+++ b/links/about.html
@@ -109,6 +109,10 @@ li.nav-item:hover span.mbar{
       border-style: solid;
       border-width: 1px;
     }
+    .infop{
+      width: 80%;
+      height: 200px;
+    }
     </style>
     </head>
     <body>
@@ -159,6 +163,7 @@ li.nav-item:hover span.mbar{
               </div>
               <div class="row">
                 <div class="col-md-12 border">
+                  <div class="infop"></div>
                   </div>
                 </div>
               </div>
