--- a/links/about.html
+++ b/links/about.html
@@ -112,7 +112,10 @@ li.nav-item:hover span.mbar{
     .infop{
       width: 80%;
       height: 200px;
+      border-style: solid;
+      border-width: 1px;
     }
+    
     </style>
     </head>
     <body>
