--- a/links/about.html
+++ b/links/about.html
@@ -110,12 +110,12 @@ li.nav-item:hover span.mbar{
       border-width: 1px;
     }
     .infop{
-      width: 80%;
+      width: 40%;
+      margin: auto;
       height: 200px;
       border-style: solid;
       border-width: 1px;
     }
-    
     </style>
     </head>
     <body>
