--- a/links/about.html
+++ b/links/about.html
@@ -116,6 +116,11 @@ li.nav-item:hover span.mbar{
       border-style: solid;
       border-width: 1px;
     }
+    .infop::before{
+      content: url(../images/false.png);
+      width: 60px;
+      height: 50px;
+    }
     </style>
     </head>
     <body>
