--- a/links/about.html
+++ b/links/about.html
@@ -155,7 +155,7 @@ li.nav-item:hover span.mbar{
             <div class="container-fluid">
               <div class="shape">
               <div class="row">
-                  <div class="col-md-12 border p-0">
+                  <div class="col-md-12 border">
                     <div class="abtext">
                     <span class="obj1">/</span><span class="obj2">/</span><span style="font-size: 67px;">A</span><span style="font-size: 70px;">B</span><span style="font-size: 73px;">O</span><span style="font-size: 76px;">U</span><span style="font-size: 79px;">T</span><span style="font-size: 40px;">M</span><span style="font-size: 40px;">E</span>
                   </div>
