--- a/links/about.html
+++ b/links/about.html
@@ -94,9 +94,26 @@ li.nav-item:hover span.mbar{
      z-index: 2;
      position: relative;
     }
-    .shape{
-      width: 760px;
+    @media only screen and (min-width: 1200px){
+      .shape{
+      width: 1160px;
       margin: auto;
+    }}
+    @media only screen and (min-width: 992px){
+    .shape{
+      width: 952px;
+      margin: auto;
+    }}
+    @media only screen and (min-width: 768px){
+      .shape{
+      width: 728px;
+      margin: auto;
+    }}
+    @media only screen and (min-width: 600px){
+      .shape{
+        width: 560px;
+        margin: auto;
+      }
     }
     .obj1{
       font-size: 45px;
