--- a/links/about.html
+++ b/links/about.html
@@ -98,21 +98,36 @@ li.nav-item:hover span.mbar{
       .shape{
       width: 1160px;
       margin: auto;
-    }}
+    }
+    body{
+      background-color: black;
+    }
+  }
     @media only screen and (min-width: 992px){
     .shape{
       width: 952px;
       margin: auto;
-    }}
+    }
+    body{
+      background-color: brown;
+    }
+  }
     @media only screen and (min-width: 768px){
       .shape{
       width: 728px;
       margin: auto;
-    }}
+    }
+    body{
+      background-color: blue;
+    }
+  }
     @media only screen and (min-width: 600px){
       .shape{
         width: 560px;
         margin: auto;
+      }
+      body{
+        background-color: chartreuse;
       }
     }
     .obj1{
