--- a/links/about.html
+++ b/links/about.html
@@ -125,7 +125,10 @@ li.nav-item:hover span.mbar{
       font-size: 45px;
     }
     .abtext{
-      text-align: left;
+      border-style: solid;
+      border-width: 1px;
+    }
+    .abholder{
       border-style: solid;
       border-width: 1px;
     }
@@ -177,8 +180,10 @@ li.nav-item:hover span.mbar{
               <div class="row">
                   <div class="col-md-12 border">
                     <div class="abtext">
+                      <div class="abholder">
                     <span class="obj1">/</span><span class="obj2">/</span><span style="font-size: 67px;">A</span><span style="font-size: 70px;">B</span><span style="font-size: 73px;">O</span><span style="font-size: 76px;">U</span><span style="font-size: 79px;">T</span><span style="font-size: 40px;">M</span><span style="font-size: 40px;">E</span>
                   </div>
+                 </div>
                   </div>
               </div>
               <div class="row">
