--- a/links/about.html
+++ b/links/about.html
@@ -131,6 +131,7 @@ li.nav-item:hover span.mbar{
     .abholder{
       border-style: solid;
       border-width: 1px;
+      width: 40%;
     }
     .infop{
       width: 50%;
