--- a/links/about.html
+++ b/links/about.html
@@ -131,7 +131,8 @@ li.nav-item:hover span.mbar{
     .abholder{
       border-style: solid;
       border-width: 1px;
-      width: 40%;
+      width: 30%;
+      margin-right: 100px;
     }
     .infop{
       width: 50%;
