--- a/links/about.html
+++ b/links/about.html
@@ -132,7 +132,7 @@ li.nav-item:hover span.mbar{
       border-style: solid;
       border-width: 1px;
       width: 30%;
-      margin-right: 100px;
+      margin-left: 40px;
     }
     .infop{
       width: 50%;
