--- a/links/about.html
+++ b/links/about.html
@@ -117,6 +117,15 @@ li.nav-item:hover span.mbar{
       width: 1160px;
       margin: auto;
     }
+    .infop::before{
+    display:inline-block;
+    height:80px;
+    width:80px;
+    margin-right: 5px;
+    content: "";
+    background:url(../images/false.png) no-repeat 0 0;
+    background-size: 80px 80px;
+}
   }
     .obj1{
       font-size: 45px;
