--- a/links/about.html
+++ b/links/about.html
@@ -121,10 +121,12 @@ li.nav-item:hover span.mbar{
     display:inline-block;
     height:80px;
     width:80px;
-    margin-right: 5px;
     content: "";
     background:url(../images/false.png) no-repeat 0 0;
     background-size: 80px 80px;
+    position: relative;
+    bottom: 25px;
+    right: 15px;
 }
   }
     .obj1{
