--- a/links/about.html
+++ b/links/about.html
@@ -56,16 +56,16 @@ li{
   95% {background-color: lightblue; width: 50%;}
   100% {background-color: lightblue; width: 52.5%;}
 }
-span.mborder{
+.mborder{
   width: 100%;
   height: 5px;
   display: block;
   position: relative;
 }
-span.mbar{
+.mbar{
   display: none;
 }
-li.nav-item:hover span.mbar{
+li.nav-item:hover .mbar{
   display: block;
   border-radius: 5px;
   width: 52.5%;
