--- a/links/about.html
+++ b/links/about.html
@@ -129,12 +129,6 @@ li.nav-item:hover .mbar{
     right: 250px;
 }
   }
-    .obj1{
-      font-size: 45px;
-    }
-    .obj2{
-      font-size: 45px;
-    }
     .abtext{
       border-style: solid;
       border-width: 1px;
@@ -194,7 +188,7 @@ li.nav-item:hover .mbar{
                   <div class="col-md-12 border">
                     <div class="abtext">
                       <div class="abholder">
-                    <span class="obj1">/</span><span class="obj2">/</span><span style="font-size: 67px;">A</span><span style="font-size: 70px;">B</span><span style="font-size: 73px;">O</span><span style="font-size: 76px;">U</span><span style="font-size: 79px;">T</span><span style="font-size: 40px;">M</span><span style="font-size: 40px;">E</span>
+                    <span style="font-size: 45px;">A</span><span style="font-size: 48px;">M</span><span style="font-size: 67px;">A</span><span style="font-size: 70px;">B</span><span style="font-size: 73px;">O</span><span style="font-size: 76px;">U</span><span style="font-size: 79px;">T</span><span style="font-size: 40px;">M</span><span style="font-size: 40px;">E</span>
                   </div>
                  </div>
                   </div>
