--- a/links/about.html
+++ b/links/about.html
@@ -188,7 +188,7 @@ li.nav-item:hover .mbar{
                   <div class="col-md-12 border">
                     <div class="abtext">
                       <div class="abholder">
-                    <span style="font-size: 45px;">A</span><span style="font-size: 48px;">M</span><span style="font-size: 67px;">A</span><span style="font-size: 70px;">B</span><span style="font-size: 73px;">O</span><span style="font-size: 76px;">U</span><span style="font-size: 79px;">T</span><span style="font-size: 40px;">M</span><span style="font-size: 40px;">E</span>
+                    <span style="font-size: 45px;">/</span><span style="font-size: 48px;">/</span><span style="font-size: 67px;">A</span><span style="font-size: 70px;">B</span><span style="font-size: 73px;">O</span><span style="font-size: 76px;">U</span><span style="font-size: 79px;">T</span><span style="font-size: 40px;">M</span><span style="font-size: 40px;">E</span>
                   </div>
                  </div>
                   </div>
