--- a/links/about.html
+++ b/links/about.html
@@ -33,6 +33,9 @@ a:active{
 li{
     font-family: 'Source Code Pro', monospace;
 }
+.obj1{
+  font-family: 'Varela Round', sans-serif;
+}
 @keyframes example {
   0%   {background-color: lightblue; width: 2.5%;}
   5%  {background-color: lightblue; width: 5%;}
@@ -188,7 +191,7 @@ li.nav-item:hover .mbar{
                   <div class="col-md-12 border">
                     <div class="abtext">
                       <div class="abholder">
-                    <span style="font-size: 45px;">/</span><span style="font-size: 48px;">/</span><span style="font-size: 67px;">A</span><span style="font-size: 70px;">B</span><span style="font-size: 73px;">O</span><span style="font-size: 76px;">U</span><span style="font-size: 79px;">T</span><span style="font-size: 40px;">M</span><span style="font-size: 40px;">E</span>
+                    <span class="obj1" style="font-size: 45px;">/</span><span class="obj1" style="font-size: 48px;">/</span><span class="obj1" style="font-size: 67px;">A</span><span class="obj1" style="font-size: 70px;">B</span><span class="obj1" style="font-size: 73px;">O</span><span class="obj1" style="font-size: 76px;">U</span><span class="obj1" style="font-size: 79px;">T</span><span class="obj1" style="font-size: 40px;">M</span><span class="obj1" style="font-size: 40px;">E</span>
                   </div>
                  </div>
                   </div>
