--- a/links/about.html
+++ b/links/about.html
@@ -35,6 +35,7 @@ li{
 }
 .obj1{
   font-family: 'Varela Round', sans-serif;
+  font-weight: bolder;
 }
 @keyframes example {
   0%   {background-color: lightblue; width: 2.5%;}
@@ -139,8 +140,10 @@ li.nav-item:hover .mbar{
     .abholder{
       border-style: solid;
       border-width: 1px;
-      width: 30%;
+      width: 40%;
       margin-left: 500px;
+      position: relative;
+      top: 20px;
     }
     .infop{
       width: 50%;
