--- a/links/about.html
+++ b/links/about.html
@@ -115,6 +115,14 @@ li.nav-item:hover .mbar{
       width: 952px;
       margin: auto;
     }
+    .abholder{
+      border-style: solid;
+      border-width: 1px;
+      width: 40%;
+      margin-left: 300px;
+      position: relative;
+      top: 25px;
+    }
   }
     @media only screen and (min-width: 1200px){
       .shape{
