--- a/links/about.html
+++ b/links/about.html
@@ -115,6 +115,10 @@ li.nav-item:hover .mbar{
       width: 952px;
       margin: auto;
     }
+    .abtext{
+      border-style: solid;
+      border-width: 1px;
+    }
     .abholder{
       border-style: solid;
       border-width: 1px;
