--- a/links/about.html
+++ b/links/about.html
@@ -127,11 +127,65 @@ li.nav-item:hover .mbar{
       position: relative;
       top: 25px;
     }
+    #insta1{
+      font-size: 37px;
+    }
+    #insta2{
+      font-size: 40px;
+    }
+    #insta3{
+      font-size: 59px;
+    }
+    #insta4{
+      font-size: 62px;
+    }
+    #insta5{
+      font-size: 65px;
+    }
+    #insta6{
+      font-size: 68px;
+    }
+    #insta7{
+      font-size: 71px;
+    }
+    #insta8{
+      font-size: 42px;
+    }
+    #insta9{
+      font-size: 42px;
+    }
   }
     @media only screen and (min-width: 1200px){
       .shape{
       width: 1160px;
       margin: auto;
+    }
+    #insta1{
+      font-size: 45px;
+    }
+    #insta2{
+      font-size: 48px;
+    }
+    #insta3{
+      font-size: 67px;
+    }
+    #insta4{
+      font-size: 70px;
+    }
+    #insta5{
+      font-size: 73px;
+    }
+    #insta6{
+      font-size: 76px;
+    }
+    #insta7{
+      font-size: 79px;
+    }
+    #insta8{
+      font-size: 42px;
+    }
+    #insta9{
+      font-size: 42px;
     }
     .abholder{
       border-style: solid;
@@ -206,7 +260,7 @@ li.nav-item:hover .mbar{
                   <div class="col-md-12 border">
                     <div class="abtext">
                       <div class="abholder">
-                    <span class="obj1" style="font-size: 45px;">/</span><span class="obj1" style="font-size: 48px;">/</span><span class="obj1" style="font-size: 67px;">A</span><span class="obj1" style="font-size: 70px;">B</span><span class="obj1" style="font-size: 73px;">O</span><span class="obj1" style="font-size: 76px;">U</span><span class="obj1" style="font-size: 79px;">T</span><span class="obj1" style="font-size: 40px;">M</span><span class="obj1" style="font-size: 40px;">E</span>
+                        <span class="obj1" id="insta1">/</span><span class="obj1" id="insta2">/</span><span class="obj1" id="insta3">A</span><span id="insta4"class="obj1">B</span><span id="insta5" class="obj1">O</span><span id="insta6" class="obj1">U</span><span id="insta7" class="obj1">T</span><span id="insta8" class="obj1">M</span><span id="insta9" class="obj1">E</span>
                   </div>
                  </div>
                   </div>
