--- a/links/about.html
+++ b/links/about.html
@@ -154,6 +154,17 @@ li.nav-item:hover .mbar{
     #insta9{
       font-size: 42px;
     }
+    .infop::before{
+    display:inline-block;
+    height: 200px;
+    width:300px;
+    content: "";
+    background:url(../images/false.png) no-repeat 0 0;
+    background-size: 300px 200px;
+    position: relative;
+    bottom: 0;
+    right: 0;
+}
   }
     @media only screen and (min-width: 1200px){
       .shape{
