--- a/links/about.html
+++ b/links/about.html
@@ -162,8 +162,8 @@ li.nav-item:hover .mbar{
     background:url(../images/false.png) no-repeat 0 0;
     background-size: 300px 200px;
     position: relative;
-    bottom: 0;
-    right: 0;
+    bottom: 120px;
+    right: 120px;
 }
   }
     @media only screen and (min-width: 1200px){
