--- a/links/about.html
+++ b/links/about.html
@@ -109,6 +109,44 @@ li.nav-item:hover .mbar{
       width: 728px;
       margin: auto;
     }
+    .abtext{
+      border-style: solid;
+      border-width: 1px;
+    }
+    .abholder{
+      border-style: solid;
+      border-width: 1px;
+      width: 40%;
+      margin-left: 395px;
+      position: relative;
+      top: 25px;
+    } #insta1{
+      font-size: 18px;
+    }
+    #insta2{
+      font-size: 21px;
+    }
+    #insta3{
+      font-size: 51px;
+    }
+    #insta4{
+      font-size: 54px;
+    }
+    #insta5{
+      font-size: 57px;
+    }
+    #insta6{
+      font-size: 60px;
+    }
+    #insta7{
+      font-size: 63px;
+    }
+    #insta8{
+      font-size: 37px;
+    }
+    #insta9{
+      font-size: 37px;
+    }
   }
   @media only screen and (min-width: 992px){
     .shape{
