--- a/links/about.html
+++ b/links/about.html
@@ -147,6 +147,17 @@ li.nav-item:hover .mbar{
     #insta9{
       font-size: 34px;
     }
+    .infop::before{
+    display:inline-block;
+    height: 190px;
+    width:210px;
+    content: "";
+    background:url(../images/false.png) no-repeat 0 0;
+    background-size: 210px 190px;
+    position: relative;
+    bottom:0;
+    right:0;
+}
   }
   @media only screen and (min-width: 992px){
     .shape{
