--- a/links/about.html
+++ b/links/about.html
@@ -155,8 +155,8 @@ li.nav-item:hover .mbar{
     background:url(../images/false.png) no-repeat 0 0;
     background-size: 290px 190px;
     position: relative;
-    bottom:0;
-    right:0;
+    bottom:100px;
+    right:140px;
 }
   }
   @media only screen and (min-width: 992px){
