--- a/links/about.html
+++ b/links/about.html
@@ -120,6 +120,7 @@ li.nav-item:hover .mbar{
       margin-left: 299px;
       position: relative;
       top: 25px;
+      z-index: -2;
     } #insta1{
       font-size: 30px;
     }
@@ -175,6 +176,7 @@ li.nav-item:hover .mbar{
       margin-left: 395px;
       position: relative;
       top: 25px;
+      z-index: -2;
     }
     #insta1{
       font-size: 37px;
@@ -254,6 +256,7 @@ li.nav-item:hover .mbar{
       margin-left: 500px;
       position: relative;
       top: 25px;
+      z-index: -2;
     }
     .abtext{
       border-style: solid;
