--- a/links/about.html
+++ b/links/about.html
@@ -255,6 +255,9 @@ li.nav-item:hover .mbar{
     bottom: 140px;
     right: 240px;
 }
+.menu{
+  display: inline-block;
+}
   }
     .infop{
       width: 60%;
@@ -313,31 +316,11 @@ li.nav-item:hover .mbar{
               <div class="row">
                 <div class="col-md-12 border p-0">
                   <div class="infop">
-                    <ul class="nav nav-pills" role="tablist">
-                      <li class="nav-item">
-                        <a class="nav-link active" data-bs-toggle="pill" href="#life">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="pill" href="#education">Education</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="pill" href="#experience">Experience</a>
-                      </li>
+                    <ul>
+                      <li class="menu">Life</li>
+                      <li class="menu">Education</li>
+                      <li class="menu">Experience</li>
                     </ul>
-                    <div class="tab-content">
-                      <div id="life" class="container tab-pane active"><br>
-                        <h3>Life</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                      </div>
-                      <div id="education" class="container tab-pane fade"><br>
-                        <h3>Education</h3>
-                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                      </div>
-                      <div id="experience" class="container tab-pane fade"><br>
-                        <h3>Experience</h3>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-                      </div>
-                    </div>
                   </div>
                   </div>
                 </div>
