--- a/links/about.html
+++ b/links/about.html
@@ -153,6 +153,13 @@ li.nav-item:hover .mbar{
     bottom: 95px;
     right: 145px;
 }
+.infop{
+      width: 60%;
+      margin: auto;
+      height: 200px;
+      border-style: solid;
+      border-width: 1px;
+    }
   }
   @media only screen and (min-width: 992px){
     .shape{
@@ -204,6 +211,13 @@ li.nav-item:hover .mbar{
     bottom: 120px;
     right: 195px;
 }
+.infop{
+      width: 60%;
+      margin: auto;
+      height: 200px;
+      border-style: solid;
+      border-width: 1px;
+    }
   }
     @media only screen and (min-width: 1200px){
       .shape{
@@ -255,17 +269,20 @@ li.nav-item:hover .mbar{
     bottom: 140px;
     right: 240px;
 }
-.menu{
-  display: inline-block;
+.info-con{
+  border-style: solid;
+  border-width: 2px;
+  width: 60%;
+  height: 200px;
 }
-  }
-    .infop{
+.infop{
       width: 60%;
       margin: auto;
       height: 200px;
       border-style: solid;
       border-width: 1px;
     }
+  }
     </style>
     </head>
     <body>
@@ -316,11 +333,7 @@ li.nav-item:hover .mbar{
               <div class="row">
                 <div class="col-md-12 border p-0">
                   <div class="infop">
-                    <ul>
-                      <li class="menu">Life</li>
-                      <li class="menu">Education</li>
-                      <li class="menu">Experience</li>
-                    </ul>
+                    <div class="info-con"></div>
                   </div>
                   </div>
                 </div>
