--- a/links/about.html
+++ b/links/about.html
@@ -274,6 +274,8 @@ li.nav-item:hover .mbar{
   border-width: 2px;
   width: 40%;
   height: 120px;
+  position: relative;
+  bottom: 200px;
 }
 .infop{
       width: 60%;
