--- a/links/about.html
+++ b/links/about.html
@@ -335,7 +335,33 @@ li.nav-item:hover .mbar{
               <div class="row">
                 <div class="col-md-12 border p-0">
                   <div class="infop">
-                    <div class="info-con"></div>
+                    <div class="info-con">
+                      <ul class="nav nav-pills" role="tablist">
+                        <li class="nav-item">
+                          <a class="nav-link active" data-toggle="pill" href="#home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" data-toggle="pill" href="#menu1">Menu 1</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" data-toggle="pill" href="#menu2">Menu 2</a>
+                        </li>
+                      </ul>
+                      <div class="tab-content">
+                        <div id="home" class="container tab-pane active"><br>
+                          <h3>HOME</h3>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                        <div id="menu1" class="container tab-pane fade"><br>
+                          <h3>Menu 1</h3>
+                          <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                        <div id="menu2" class="container tab-pane fade"><br>
+                          <h3>Menu 2</h3>
+                          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                   </div>
                 </div>
