--- a/links/about.html
+++ b/links/about.html
@@ -336,27 +336,27 @@ li.nav-item:hover .mbar{
                 <div class="col-md-12 border p-0">
                   <div class="infop">
                     <div class="info-con">
-                      <ul class="nav nav-pills ml-5" role="tablist">
+                      <ul class="nav nav-pills float-lg-right" role="tablist">
                         <li class="nav-item">
-                          <a class="nav-link active" data-toggle="pill" href="#home">Home</a>
+                          <a class="nav-link active" data-toggle="pill" href="#life">Life</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" data-toggle="pill" href="#menu1">Menu 1</a>
+                          <a class="nav-link" data-toggle="pill" href="#education">Education</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" data-toggle="pill" href="#menu2">Menu 2</a>
+                          <a class="nav-link" data-toggle="pill" href="#experience">Experience</a>
                         </li>
                       </ul>
                       <div class="tab-content">
-                        <div id="home" class="container tab-pane active"><br>
+                        <div id="life" class="container tab-pane active"><br>
                           <h3>HOME</h3>
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
-                        <div id="menu1" class="container tab-pane fade"><br>
+                        <div id="education" class="container tab-pane fade"><br>
                           <h3>Menu 1</h3>
                           <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div>
-                        <div id="menu2" class="container tab-pane fade"><br>
+                        <div id="experience" class="container tab-pane fade"><br>
                           <h3>Menu 2</h3>
                           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
                         </div>
