--- a/links/about.html
+++ b/links/about.html
@@ -284,6 +284,10 @@ li.nav-item:hover .mbar{
       border-style: solid;
       border-width: 1px;
     }
+  #tbcontent{
+    border-width: 2px;
+    border-style: solid;
+  }
   }
     </style>
     </head>
@@ -347,7 +351,7 @@ li.nav-item:hover .mbar{
                           <a class="nav-link" data-toggle="pill" href="#experience">Experience</a>
                         </li>
                       </ul>
-                      <div class="tab-content">
+                      <div class="tab-content" id="tb-content">
                         <div id="life" class="container tab-pane active"><br>
                           <h3>HOME</h3>
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
