--- a/links/about.html
+++ b/links/about.html
@@ -288,7 +288,7 @@ li.nav-item:hover .mbar{
     border-width: 2px;
     border-style: solid;
   }
-  }
+}
     </style>
     </head>
     <body>
@@ -352,16 +352,13 @@ li.nav-item:hover .mbar{
                         </li>
                       </ul>
                       <div class="tab-content" id="tb-content">
-                        <div id="life" class="container tab-pane active"><br>
-                          <h3>HOME</h3>
+                        <div id="life" class="container tab-pane active"><br><br><br>
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
-                        <div id="education" class="container tab-pane fade"><br>
-                          <h3>Menu 1</h3>
+                        <div id="education" class="container tab-pane fade"><br><br><br>
                           <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div>
-                        <div id="experience" class="container tab-pane fade"><br>
-                          <h3>Menu 2</h3>
+                        <div id="experience" class="container tab-pane fade"><br><br><br>
                           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
                         </div>
                       </div>
