--- a/links/about.html
+++ b/links/about.html
@@ -353,13 +353,13 @@ li.nav-item:hover .mbar{
                       </ul>
                       <div class="tab-content" id="tb-content">
                         <div id="life" class="container tab-pane active"><br><br><br>
-                          <p class="w-75 float-lg-right">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                          <p class="w-75 ml-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                         <div id="education" class="container tab-pane fade"><br><br><br>
-                          <p class="w-75 float-lg-right">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                          <p class="w-75 ml-auto">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div>
                         <div id="experience" class="container tab-pane fade"><br><br><br>
-                          <p class="w-75 float-lg-right">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                          <p class="w-75 ml-auto">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
                         </div>
                       </div>
                     </div>
