--- a/links/about.html
+++ b/links/about.html
@@ -284,10 +284,6 @@ li.nav-item:hover .mbar{
       border-style: solid;
       border-width: 1px;
     }
-  #tbcontent{
-    border-width: 2px;
-    border-style: solid;
-  }
 }
     </style>
     </head>
@@ -351,15 +347,15 @@ li.nav-item:hover .mbar{
                           <a class="nav-link" data-toggle="pill" href="#experience">Experience</a>
                         </li>
                       </ul>
-                      <div class="tab-content" id="tb-content">
+                      <div class="tab-content">
                         <div id="life" class="container tab-pane active"><br><br><br>
-                          <p class="w-75 float-lg-right pl-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                          <p class="w-75 float-md-right pl-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                         <div id="education" class="container tab-pane fade"><br><br><br>
-                          <p class="w-75 float-lg-right pl-4">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                          <p class="w-75 float-md-right pl-5">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div>
                         <div id="experience" class="container tab-pane fade"><br><br><br>
-                          <p class="w-75 float-lg-right pl-4">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                          <p class="w-75 float-md-right pl-5">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
                         </div>
                       </div>
                     </div>
