--- a/links/about.html
+++ b/links/about.html
@@ -336,7 +336,7 @@ li.nav-item:hover .mbar{
                 <div class="col-md-12 border p-0">
                   <div class="infop">
                     <div class="info-con">
-                      <ul class="nav nav-pills float-lg-right" role="tablist">
+                      <ul class="nav nav-pills float-md-right nav-light bg-light" role="tablist">
                         <li class="nav-item">
                           <a class="nav-link active" data-toggle="pill" href="#life">Life</a>
                         </li>
