--- a/links/about.html
+++ b/links/about.html
@@ -24,7 +24,7 @@
     color: black;
 }
 a:hover{
-      color: white;
+      color: black;
       font-weight: bolder;
 }
 a:active{
@@ -336,7 +336,7 @@ li.nav-item:hover .mbar{
                 <div class="col-md-12 border p-0">
                   <div class="infop">
                     <div class="info-con">
-                      <ul class="nav nav-pills float-md-right nav-dark bg-light" role="tablist">
+                      <ul class="nav nav-pills float-md-right" role="tablist">
                         <li class="nav-item">
                           <a class="nav-link active" data-toggle="pill" href="#life">Life</a>
                         </li>
