--- a/links/about.html
+++ b/links/about.html
@@ -338,24 +338,27 @@ li.nav-item:hover .mbar{
                     <div class="info-con">
                       <ul class="nav nav-pills float-md-right" role="tablist">
                         <li class="nav-item">
-                          <a class="nav-link active" data-toggle="pill" href="#life">Life</a>
+                          <a class="nav-link" data-toggle="pill" href="#life">Life</a>
+                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" data-toggle="pill" href="#education">Education</a>
+                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" data-toggle="pill" href="#experience">Experience</a>
+                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
                         </li>
                       </ul>
                       <div class="tab-content">
                         <div id="life" class="container tab-pane active"><br><br><br>
-                          <p class="w-75 float-md-right pl-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                          <p class="w-75 float-md-right pl-md-5 ml-md-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                         <div id="education" class="container tab-pane fade"><br><br><br>
-                          <p class="w-75 float-md-right pl-5">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                          <p class="w-75 float-md-right pl-md-5 ml-md-2">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div>
                         <div id="experience" class="container tab-pane fade"><br><br><br>
-                          <p class="w-75 float-md-right pl-5">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                          <p class="w-75 float-md-right pl-md-5 ml-md-2">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
                         </div>
                       </div>
                     </div>
