--- a/links/about.html
+++ b/links/about.html
@@ -66,7 +66,7 @@ li{
   display: block;
   position: relative;
 }
-.mbar{
+.mbar,.mbar2{
   display: none;
 }
 li.nav-item:hover .mbar{
@@ -81,6 +81,19 @@ li.nav-item:hover .mbar{
   position: relative;
   left: 9px;
   top: -10px;
+}
+li.nav-item:hover .mbar2{
+  display: block;
+  border-radius: 5px;
+  width: 52.5%;
+  height: 5px;
+  display: block;
+  background-color: lightblue;
+  animation-name: example;
+  animation-duration: 0.4s;
+  position: relative;
+  left: 14px;
+  top: -9px;
 }
   #letterhead{
     font-family: 'Monoton', cursive;
@@ -336,18 +349,18 @@ li.nav-item:hover .mbar{
                 <div class="col-md-12 border p-0">
                   <div class="infop">
                     <div class="info-con">
-                      <ul class="nav nav-pills float-md-right" role="tablist">
+                      <ul class="nav float-md-right" role="tablist">
                         <li class="nav-item">
-                          <a class="nav-link" data-toggle="pill" href="#life">Life</a>
-                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
+                          <a class="nav-link" href="#life">Life</a>
+                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar2"></span></span></div>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" data-toggle="pill" href="#education">Education</a>
-                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
+                          <a class="nav-link" href="#education">Education</a>
+                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar2"></span></span></div>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" data-toggle="pill" href="#experience">Experience</a>
-                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
+                          <a class="nav-link" href="#experience">Experience</a>
+                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar2"></span></span></div>
                         </li>
                       </ul>
                       <div class="tab-content">
