--- a/links/about.html
+++ b/links/about.html
@@ -66,33 +66,20 @@ li{
   display: block;
   position: relative;
 }
-.mbar,.mbar2{
+.mbar{
   display: none;
 }
-li.nav-item:hover .mbar{
+a.nav-link:hover .mbar{
   display: block;
   border-radius: 5px;
-  width: 52.5%;
+  width: 50.5%;
   height: 5px;
   display: block;
   background-color: lightblue;
   animation-name: example;
   animation-duration: 0.4s;
   position: relative;
-  left: 9px;
-  top: -10px;
-}
-li.nav-item:hover .mbar2{
-  display: block;
-  border-radius: 5px;
-  width: 45.5%;
-  height: 5px;
-  display: block;
-  background-color: lightblue;
-  animation-name: example;
-  animation-duration: 0.4s;
-  position: relative;
-  left: 16px;
+  left: 10px;
   top: -10px;
 }
   #letterhead{
@@ -352,15 +339,15 @@ li.nav-item:hover .mbar2{
                       <ul class="nav float-md-right" role="tablist">
                         <li class="nav-item">
                           <a class="nav-link" href="#life">Life</a>
-                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar2"></span></span></div>
+                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#education">Education</a>
-                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar2"></span></span></div>
+                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#experience">Experience</a>
-                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar2"></span></span></div>
+                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
                         </li>
                       </ul>
                       <div class="tab-content">
