--- a/links/about.html
+++ b/links/about.html
@@ -69,10 +69,10 @@ li{
 .mbar{
   display: none;
 }
-a.nav-link:hover .mbar{
+li.nav-item:hover .mbar{
   display: block;
   border-radius: 5px;
-  width: 50.5%;
+  width: 52.5%;
   height: 5px;
   display: block;
   background-color: lightblue;
