--- a/links/about.html
+++ b/links/about.html
@@ -69,7 +69,7 @@ li{
 .mbar{
   display: none;
 }
-li.nav-item:hover .mbar{
+a.nav-link:hover .mbar{
   display: block;
   border-radius: 5px;
   width: 52.5%;
@@ -300,20 +300,20 @@ li.nav-item:hover .mbar{
                     <img src="../images/crossimg.png" alt="beam-of-lines" class="cross">
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../index.html" target="_self">HOME</a>
-                    <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
+                    <a class="nav-link" href="../index.html" target="_self">HOME
+                    <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">PROJECTS</a>
-                    <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
+                    <a class="nav-link" href="#">PROJECTS
+                    <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="about.html" target="_self">ABOUT</a>
-                    <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
+                    <a class="nav-link" href="about.html" target="_self">ABOUT
+                    <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">CONTACT</a>
-                    <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
+                    <a class="nav-link" href="#">CONTACT
+                    <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div></a>
                   </li>
                   <li class="nav-item">
                   <a class="nav-link" id="plalink" href="#"><span style="color: #0b8de3;">RESUME</span></a>
@@ -338,16 +338,16 @@ li.nav-item:hover .mbar{
                     <div class="info-con">
                       <ul class="nav float-md-right" role="tablist">
                         <li class="nav-item">
-                          <a class="nav-link" href="#life">Life</a>
-                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
+                          <a class="nav-link" href="#life">Life
+                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#education">Education</a>
-                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
+                          <a class="nav-link" href="#education">Education
+                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#experience">Experience</a>
-                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div>
+                          <a class="nav-link" href="#experience">Experience
+                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div></a>
                         </li>
                       </ul>
                       <div class="tab-content">
