--- a/links/about.html
+++ b/links/about.html
@@ -334,19 +334,15 @@ a.nav-link:hover .mbar{
                     <div class="info-con">
                       <ul class="nav float-md-right">
                         <li class="nav-item">
-                          <a class="nav-link" href="#life"  onclick="openInfo(event, 'Life')" id="tablelink">Life
-                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div></a>
+                          <a class="tablelink" href="#life"  onclick="openInfo(event, 'Life')">Life</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#education"  onclick="openInfo(event, 'Education')" id="tablelink">Education
-                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div></a>
+                          <a class="tablelink" href="#education"  onclick="openInfo(event, 'Education')">Education</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#experience" onclick="openInfo(event, 'Experience')" id="tablelink">Experience
-                          <div class="d-none d-md-block"><span class="mborder"><span class="mbar"></span></span></div></a>
+                          <a class="tablelink" href="#experience" onclick="openInfo(event, 'Experience')">Experience</a>
                         </li>
                       </ul>
-                      <div class="tab-content">
                         <div id="life" class="tcontent"><br><br><br>
                           <p class="w-75 float-md-right pl-md-5 ml-md-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
@@ -356,7 +352,6 @@ a.nav-link:hover .mbar{
                         <div id="experience" class="tcontent"><br><br><br>
                           <p class="w-75 float-md-right pl-md-5 ml-md-2">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
                         </div>
-                      </div>
                     </div>
                   </div>
                   </div>
