Fixing bug #1 info tab

--- a/links/about.html
+++ b/links/about.html
@@ -334,13 +334,13 @@ a.nav-link:hover .mbar{
                     <div class="info-con">
                       <ul class="nav float-md-right">
                         <li class="nav-item">
-                          <a class="tablelink" href="#life"  onclick="openInfo(event, 'Life')">Life</a>
+                          <a class="tablelink" href="#life"  onclick="infoText(event, 'Life')">Life</a>
                         </li>
                         <li class="nav-item">
-                          <a class="tablelink" href="#education"  onclick="openInfo(event, 'Education')">Education</a>
+                          <a class="tablelink" href="#education"  onclick="infoText(event, 'Education')">Education</a>
                         </li>
                         <li class="nav-item">
-                          <a class="tablelink" href="#experience" onclick="openInfo(event, 'Experience')">Experience</a>
+                          <a class="tablelink" href="#experience" onclick="infoText(event, 'Experience')">Experience</a>
                         </li>
                       </ul>
                         <div id="life" class="tcontent"><br><br><br>
