--- a/links/about.html
+++ b/links/about.html
@@ -341,7 +341,7 @@ a.nav-link:hover .mbar{
                           <a class="nav-link" data-toggle="pill" href="#education">Education</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" data-toggle="pill" href="#experience">Experience</a>
+                          <a class="nav-link pr-md-1" data-toggle="pill" href="#experience">Experience</a>
                         </li>
                       </ul>
                       <div class="tab-content">
