--- a/links/about.html
+++ b/links/about.html
@@ -335,7 +335,7 @@ a.nav-link:hover .mbar{
                     <div class="info-con">
                       <ul class="nav nav-pills float-md-right" role="tablist">
                         <li class="nav-item">
-                          <a class="nav-link" data-toggle="pill" href="#life">Life</a>
+                          <a class="nav-link active" data-toggle="pill" href="#life">Life</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" data-toggle="pill" href="#education">Education</a>
